Fix some css issues with scrollbars on windows/linux
* Create custom scrollbar on chrome, unfortunately firefox doesn't support it

[Delivers #65800122]

--- a/lumify-web-war/src/main/webapp/less/users/users.less
+++ b/lumify-web-war/src/main/webapp/less/users/users.less
@@ -1,7 +1,7 @@
 @import (reference) "../util/constants";
 
 background: #efefef;
-width: 340px;
+width: 390px;
 
 .content {
   display: block;
@@ -9,13 +9,15 @@ width: 340px;
   width: auto;
   box-sizing: border-box;
   white-space: normal;
-  overflow: visible;
+  overflow: hidden;
 }
 
 .users-list {
   float: left;
-  overflow: auto;
   height: 100%;
+  overflow: auto;
+  overflow-x: hidden;
+  width: 130px;
 
   .user a {
     max-width: 95px;
