--- a/lumify-web-war/src/main/webapp/less/util/constants.less
+++ b/lumify-web-war/src/main/webapp/less/util/constants.less
@@ -2,6 +2,7 @@
 @menubar-width: 35px;
 @menubar-background: #444;
 @blue-color: #0088cc;
+@scrollbar-width: 8px;
 
 @pane-background: #f9f9f9;
 
